--- a/caseStudyWP/09-appendixsamSim.Rmd
+++ b/caseStudyWP/09-appendixsamSim.Rmd
@@ -7,8 +7,8 @@ bookdown::render_book("index.Rmd")
 
 # SamSim MODEL DOCUMENTATION {#app:third-appendix}
 
-SamSim is the closed loop simulation modelling tool used for calculation of the projection based LRPs. An overview of SamSim and the code can be found in project [github page](https://github.com/Pacific-salmon-assess/samSim/tree/LRP). Samsim includes two population levels, it could be applied to one Conservation Unit (CU) with component sites, or one Stock Management Unit (SMU) with component CUs, OR even one region with component SMUs. For the LRP analysis two SMUs were used as Study cases: the West Coast of Vancouver Island (WCVI) Chinook SMU (with five CUs) and the Interior Fraser Coho Salmon SMU (with three CUs). This appendix describes the samSim model equations relevant to these study cases. 
-The simulation model has two main phases: Model Priming and Projections. The model priming phase recreates data for past years, either by populating objects with observed data or by generating data based on input parameters. The projection phase generates data for future years based on the user defined scenarios and management procedures.  Four primary time-series are populated in this simulation model: Spawners $S_{y,k}$, Recruitment $R_{y,k}$, Catch $C_{y,k,i}$ and exploitation rate $ER_{y,k,i}$. The model indexes,parameters and quantities are defined in Table \@ref(tab:modvar). Detailed definitions of the input data and parameters are provided in the project [README](https://github.com/Pacific-salmon-assess/samSim/tree/LRP#readme). 
+SamSim is the closed loop simulation modelling tool used for calculation of the projection based LRPs. An overview of SamSim and the code can be found in project [github page](https://github.com/Pacific-salmon-assess/samSim/tree/LRP). Samsim includes two population levels, it could be applied to one Conservation Unit (CU) with component sites, or one Stock Management Unit (SMU) with component CUs, OR even one region with component SMUs. For the LRP analysis two SMUs were used as Study cases: the West Coast of Vancouver Island (WCVI) Chinook SMU (with five CUs) and the Interior Fraser Coho Salmon SMU (with three CUs). This appendix describes the samSim model equations relevant to these study cases.
+The following sections in this appendix are organized similarly to the samSim code, that way the subheadings of this appendix can be read as pseudo code.  The simulation model has two main phases: Model Priming and Projections. The model priming phase recreates data for past years, either by populating objects with observed data or by generating data based on input parameters. The projection phase generates data for future years based on the user defined scenarios and management procedures. Four primary time-series are populated in this simulation model: Spawners $S_{y,k}$, Recruitment $R_{y,k}$, Catch $C_{y,k,i}$ and exploitation rate $ER_{y,k,i}$. The model indexes are defined in Table \@ref(tab:modvar), the model parameters and model input are defined in Table \@ref(tab:paramtab) parameters and the modeled quantities are defined in Table \@ref(tab:modtab). Detailed definitions of the input data and parameters are provided in the project [README](https://github.com/Pacific-salmon-assess/samSim/tree/LRP#readme). 
 
 
 
@@ -17,20 +17,43 @@ The simulation model has two main phases: Model Priming and Projections. The mod
 
 -->
 
-```{r paramtab, tab.cap="List of samSim model indexes and variables", warning=FALSE, echo=FALSE, fig.align="center"}
+```{r indtab, tab.cap="List of samSim model indexes", warning=FALSE, echo=FALSE, fig.align="center"}
 
 x <- rbind(
 c("$$y$$" , "year"),
 c("$$j$$" , "age" ),
 c("$$k$$" , "Conservation Unit (CU)"),
-c("$$i$$" , "Nation" ),
-c("$$S_{y,k}$$" , "Spawners" ),
-c("$$Sgen_{y,k}$$", "Number of spawners required to recover to $Smsy_{k}$ in one generation in the absence of fishing")
+c("$$i$$" , "Nation" )
   )
-x<-as.data.frame(x,col.names = c("Notation","Definition"))
+x<-as.data.frame(x)
 names(x)<-c("Notation","Definition")
 csasdown::csas_table(x)
 ```
+
+```{r paramtab, tab.cap="List of samSim model parameters. All quantities in this table are inputted by the user", warning=FALSE, echo=FALSE, tab.align="center"}
+
+x <- rbind(
+c("$$\\alpha_{k}$$" , "Ricker productivity parameter"),
+c("$$\\beta_{k}$$" , "Ricker carrying capacity inverse")   
+
+  )
+x<-as.data.frame(x)
+names(x)<-c("Notation","Definition")
+csasdown::csas_table(x)
+```
+
+```{r modtab, tab.cap="List of samSim modeled quantities and derived variables.", warning=FALSE, echo=FALSE, fig.align="center"}
+
+x <- rbind(
+c("$$S_{y,k}$$" , "Spawners" ),
+c("$$Sgen_{y,k}$$", "Number of spawners required to recover to $Smsy_{k}$ in one generation in the absence of fishing. continue just to see where it goes. I need the text to wrap.")
+  )
+x<-as.data.frame(x)
+names(x)<-c("Notation","Definition")
+csasdown::csas_table(x) %>% kable_styling(full_width = TRUE)
+#column_spec(2, width = "10cm")
+```
+
 <!--
 \begin{table}[ht]
 \caption{List of samSim model indexes and variables.}
@@ -87,7 +110,7 @@ $\sigma_C$ & standard deviation for realized exploitation rate variability \\
 
 
 
-The following sections in this appendix are organized similarly to the samSim code, that way the subheadings can be read as pseudo code.  
+
 
 
 ### Model Priming
@@ -177,7 +200,7 @@ Recruitment estimates produced for either formulation of the Ricker model are ca
   (\#eq:reccapscalar)
 \end{align}
 
-#### Management benchmarks
+#### Compute management benchmarks
 
 In the priming loop, the management benchmarks are only calculated in the last two generations, i.e. if $y<nPrime-2*gen$. The management benchmarks are calculated according to three options: "stockRecruit", "percentile" and "habitat". For all three options, lower and upper benchmarks are calculated. All management benchmarks are denoted with the time index, $y$, because samSim has the capability of estimating management benchmarks on a yearly basis, relying on the data obtained from the beginning of the time series to the current simulation year. However for the purpose of the LRP study cases, time invariant management benchmarks were used. <-- based on the priming? phase need to check
 
@@ -205,6 +228,7 @@ In the priming loop, the management benchmarks are only calculated in the last t
 \end{align}
 
 If the "percentile" benchmark option is chosen, the upper benchmark is set to the 50th percentile of the historical Spawners ($S_{1:y,k}$). The lower benchmark is set to the 25th percentile $S_{1:y,k}$. If the "habitat" benchmark option is used, the same benchmarks in the "stockRecruit" option is used. The difference is in the origin of the stock recruit parameters, i.e., from the habitat model instead of spawner-recruitment curve.
+Need to specify upper and lowe benchmarks here
 
 #### Infilling and Observation model
 
@@ -346,9 +370,9 @@ Once the allowable catches are defined, the realized catches are computed. The r
 \begin{align}
 \zeta_{k} &=
 \begin{cases}
- &\frac{TAC_{y,k,i=U.S}}{RY_{y,k}} & \text{i=U.S.} \\
- &\frac{mixTAC_{y,k}}{RY_{y,k}-TAC_{y,k,i=U.S.}} & \text{i=U.S.} \\
- &\frac{singleTAC_{y,k}}{RY_{y,k}-TAC_{y,k,i=U.S.}-mixTAC_{y,k}} & \text{i=U.S.} \\
+ \frac{TAC_{y,k,i=U.S}}{RY_{y,k}} & \text{i=U.S.} \\
+ \frac{mixTAC_{y,k}}{RY_{y,k}-TAC_{y,k,i=U.S.}} & \text{i=U.S.} \\
+ \frac{singleTAC_{y,k}}{RY_{y,k}-TAC_{y,k,i=U.S.}-mixTAC_{y,k}} & \text{i=U.S.} \\
 \end{cases} 
   (\#eq:muER)
 \end{align}
@@ -366,7 +390,7 @@ Once the allowable catches are defined, the realized catches are computed. The r
 
 The next step is to compute the number of Spawners and exploitation rate (Equations \@ref(eq:spawners) and \@ref(eq:ER))
 
-  
+
 \begin{align}
   (\#eq:spawners)
   S_{y,k} &= RY_{y,k} \cdot(1-ER_{y,k}) \\
@@ -411,8 +435,8 @@ This next phase of the projecton loop simulates salmon stock assessment analysis
   (\#eq:obslogRS)
 \end{align}
 
-At this point, the management benchmarks could be re-estimted based on the observed data and estimated parameters. The LRP study cases, however, set the management bechmarks to the normative period, and for this reason the management benchmarks are kept constant and equal to the management benchmark at the last year of the priming period.  
-Management benchmarks are then estimated 
+At this point, the management benchmarks could be re-estimated based on the simulated observed data and estimated parameters, using the same procedure described in section \@ref(management-benchmarks). The LRP study cases, however, set the management benchmarks to the normative period, and for this reason the management benchmarks are kept constant and equal to the management benchmark at the last year of the priming period.  
+
 
 <!--
 describe percentiles true and observed
@@ -429,18 +453,13 @@ Make a note that the habitat benchmarks are not defined here.
 #### Population Dynamics submodel again
 
 
+The final step in the projection loop is to project the brood year recruitment for the current year. The first step is to generate the marine survival estimates which are used to project recruitment when the Ricker model with survival covariates is used. The survival covariates are generated using the method described in Section \@ref(Recruitment-data-is-not-available) and Equations \@ref(eq:survCY) and \@ref(eq:surv). Marine survival covariates are considered to be constant across CUs.
 
-get marine survival estimates -- same across CUs
+The following step is compute the age structure variability, which follows the same procedure described in Section \@ref(Recruitment-data-is-not-available), based on the mean age structure for each CU given by the user and random variability following a multivariate logistic error structure.
 
-add error to proportion at ages. vary among CUmor consatant across cu 
+Once the age structure variability is calculated is time to calculate the recruitment deviations, given by a multivariate normal distribution reflecting the recruitment covariance among CUs. Recruitment is then calculated following the Equations \@ref(eq:Rickersimple) and \@ref(eq:Rickersurv). Following the computation of $R_{y,k}$, Samsim checks if checks whether a population has gone quasi-extinct, i.e. if Spawner abundances were below the extinction threshold for one generation.  
 
-Adjust productivity parameter for the skew option, i.e. draw recruitment error from a skewed multivariate normal or student t distribution. with correlation among CUs
-
-Generate recruitment recBY
-
-check for extinction if R < threshold
-
-estimate true upper and lower benchmarks -- all rely on refalpha anf beta defined  by the user. 
+The last step of the projection loop is to recort true and observed upper and lower management benchmarks. These are computed based on the true and observed spawner abundaces. The specific benchmarks calculations will depend on the user choice, as described in Section \@ref(compute-management-benchmarks). 
 
  
 
