--- a/guidelinesWP/04-chap4.Rmd
+++ b/guidelinesWP/04-chap4.Rmd
@@ -1,15 +1,33 @@
-# Guidelines for Applying Aggregate Abundance LRP Estimation Methods {#guidelines}
+# Guidelines for Applying LRPs {#guidelines}
 
 
-## Which LRP method should be used?
+## Stepwise approach for selecting LRPs
 
+We recommend a step-wise approach for identifying LRPs, with the proportion of component CUs with status above red as the default method. Aggregate-abundance based LRPs are considered when required for local or international management, and are considered supplemental to the proportion of CUs with status above red. The step-wise approach considers data availability for candidate LRP methods and provides guidance when inconsistencies in status occur from applying multiple LRP methods. These steps can be adapted in the future as more methods are developed and/or these methods are further evaluated.
+
+### Data Availability (Steps 1 and 2)
+
+The first step is to compile CU-level data to support biological status assessments as described under the Wild Salmon Policy [@holtIndicatorsStatusBenchmarks2009a; @holtEvaluatingBenchmarksBiological2018b], where those data exist. These data include (but are not limited to) time-series of spawner abundances and biological benchmarks on spawner abundances.  This step generally includes aggregating fine-spatial scale data on stocks or spawning sites to the CU level. 
+
+For many stocks, hatcheries contribute to spawning abundances and are used as a conservation tool and to increase the availability of fish for harvest. Hatchery enhancement can also reduce wild genetic diversity and are considered a risk factor for the long-term sustainability of CUs [@withler_genetically_2018]. Therefore only indicator stocks without significant enhancement were included in our analyses. Proportionate Natural Influence, PNI, is a metric of the genetic risk of hatcheries on natural populations, with values < 0.5 indicating Integrated-Hatchery populations where most fish are hatchery origin [@withler_genetically_2018]. Only stocks with PNI values $\geqslant$ 0.5 were included in the development of LRPs and assessment against those LRPs. <!--CH: comment. This text is repeated in the Case Study paper for WCVI CK. Remove the last two sentences here on PNI, or keep them here, but adjust/shorten them in the Case study paper?--> 
+
+
+Second, the number of CUs with available data to support CU-level assessments is identified, and those considered data deficient were identified (i.e., data to support CU-level assessments were not available or insufficient). CUs were considered data deficient when data on current abundances or trends were missing or insufficient (i.e., no data in the most recent generation), and/or there were insufficient data to develop CU-specific benchmarks on spawner abundances, such as those derived from spawner-recruitment models, percentiles of spawner time-series, or habitat characteristics. The specific data requirements for benchmark estimation differ according to the quantitative methods applied and context within which they are applied and are not defined here. For example, benchmarks on spawner abundances developed from hierarchical multistock spawner-recruitment analyses would require fewer years of data than those based on individual stock-recruitment analyses depending on the information captured in the multistock spawner-recruitment data set. Furthermore, changes in environmental drivers over time may result in historical data that are no longer representative of current conditions. Local biological expertise is required to review available data prior to assessments to identify the extent to which they represent current status and trends.
+
+<!--CH comment: Should we be more prescriptive about CU-specific data deficiencies? The challenge is finding reports to inform this. How many years of data do we need for robust trend detection? PSE documentation? Brown et al. 2020 on Chinook? Skeena/Nass draft data report? These are not consistent and/or at different scales/metrics. I don't see anything in the SoS scanner draft documentation,  WSPmetrics github readmewiki, but I imagine DD rulesl are built in there somewhere-->
+<!--CH comment: though maybe we can say something about # years required for trend analysis?  I've asked Gottfried and Bronwyn for advice from SoS-->
+
+### Can Data Deficient CUs be Represented by CUs With Data?
+
+
+### OLD TEXT BELOW
 
 ### Proportion of CUs above lower benchmarks.
 - Default LRP
 - conditions when this might be most appropriate and not appropriate
 -	General comment: when phrasing guidance, address when it is appropriate to use various methods as well as when it is NOT appropriate too use those methods
 
--	Default should be aggregate abundance associated with 100$\%$ of CUs being above their lower benchmark; however, there may be cases when a sub-set of CUs being below their lower benchmarks is permitted, such as where CUs are intrinsically at low levels and are not being significantly impacted by human threats such as fishing or habitat deterioration. 
+-	Default should be aggregate abundance associated with 100$\%$ of CUs being above their lower benchmark; however, there may be cases when a subset of CUs being below their lower benchmarks is permitted, such as where CUs are intrinsically at low levels and are not being significantly impacted by human threats such as fishing or habitat deterioration. 
 -	These exceptions will need to be made on a case-by-case basis, with the rationale for these decisions well-documented.
 -	Guidelines on rationale TBD
 
