--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -51,19 +51,13 @@ Interior Fraser Coho show a strong positive relationship between spatial distrib
 
 ## DATA{#cohoData}
 
-Data for this case study cover return years 1998 -2020. Data prior to 1998 were not used due to concerns about inconsistent assessment methods and data quality. All Interior Fraser Coho data were provided by DFO's Fraser River Stock Assessment Unit (M. Arbeider, pers. comm). These data included: (i) annual spawner abundance by CU (1998-2020), (ii) annual recruits-at-age by CU (brood years 1998 - 2016), (iii) a hatchery-based smolt-to-adult survival rate index, (iv) annual exploitation rates, and (v) annual spawner abundances for 11 sub-populations nested within the 5 CUs. Data were similar to those previously described in @arbeiderInteriorFraserCoho2020; data treatments, assumptions, infilling, and data quality are described in detail in that document. More recent updates that are not described in @arbeiderInteriorFraserCoho2020 include the incorporation of three additional years of data (return years 2018-2020), updates to the smolt-to-adult marine survival rate index to use a weighted average by release size, and increased data quality screening of scale ages used to calculate recruitment-at-age (M. Arbeider, pers. comm).
+Data for this case study cover return years 1998 -2020. Data prior to 1998 were not used due to concerns about inconsistent assessment methods and data quality. All Interior Fraser Coho data were provided by DFO's Fraser River Stock Assessment Unit (M. Arbeider, pers. comm). These data included: (i) annual spawner abundance by CU (1998-2020), (ii) annual recruits-at-age by CU (brood years 1998 - 2016), (iii) a hatchery-based smolt-to-adult survival rate index, (iv) annual exploitation rates, and (v) annual spawner abundances for 11 sub-populations nested within the 5 CUs. Data were similar to those previously described in @arbeiderInteriorFraserCoho2020; data treatments, assumptions, infilling, and data quality are described in detail in that document. More recent updates that are not described in @arbeiderInteriorFraserCoho2020 include the incorporation of three additional years of data (return years 2018-2020; brood years 2014-2016), updates to the smolt-to-adult marine survival rate index to use a weighted average by release size, and increased data quality screening of scale ages used to calculate the proportion of recruits at age (M. Arbeider, pers. comm).
+
+The exploitation rate time series is a large source of uncertainty for Interior Fraser coho. Exploitation rates are only available at the SMU-level, so are assumed constant among all CUs, which is unlikely to be true. Furthermore, models used to reconstruct exploitation rates require a large number of assumptions that are expected to be incorrect [@arbeiderInteriorFraserCoho2020]. Because exploitation rate time series are used to reconstruct spawner-recruit time series, errors in exploitation rates will propagate through to estimates of stock recruitment parameters, relative abundance-based benchmarks such as $S_{gen}$, and covaration in recruitment residuals. Additional sources of uncertainty in Interior Fraser coho data sets include observation errors in spawner abundance estimates and estimates of age-at-maturity. Spawner abundance estimates are largely derived from visual surveys. Scale sampling to determine age structure is incomplete at at the CU-level with small sample sizes, missing data, and limited spatial representation within CUs in some years [@kormanEvaluationFrameworkAssessing2019]
 
 
-<!--
-```{r coho-CU-timeseriesCombined, fig.cap="Escapement time series for five Interior Fraser Coho CUs", out.width = '80%', warning=FALSE, echo=FALSE, fig.align="center"}
-knitr::include_graphics("figure/coho-CU-EscpSeries-Combined.png")
-```
--->
+The scale sampling is incomplete as there are years without any scales, others with small sample sizes, and limited spatial representation within CUs.
 
-
--	Still to add: 
-  - Highlight high among-CU correlation
-  - Caveats: e.g., recruitment estimated using common ER for all CUs; review Arbeider et al. for additional data caveats
 
 
 ## CU Status Estimation
@@ -370,10 +364,13 @@ For coho: can I include plots that show this as well??
 
 *Variability in age proportions of recruits among CUs*
 
-Annual variability in the age structure of returns was generated from a multivariate logistic distribution parameterized using CU-specific time series of proportions at age. The underlying average age structure for each CU was set at the average from the available time series (brood years 1998 - 2016), while annual deviations from underlying age-specific means were drawn from a multivariate logistic distribution. Annual deviations were held constant among all CUs; however, the scale of annual deviations was controlled by the variability parameter $\tau$, which was estimated individually for each CU.  This meant that while all CUs simultaneously experienced increases or decreases in a given year, the magnitude of the increase or decrease was CU-specific. Annual deviations were held constant among CUs to represent the strong co-variation in proportions at age seen in available time series for Interior Fraser Coho, especially since 20xx (Figure xx).  When the constraint of constant annual deviations was removed, generated proportion at age data was much more variable than observed data.  
+Annual variability in the age structure of returns was generated from a multivariate logistic distribution parameterized using CU-specific time series of proportions at age. The underlying average age structure for each CU was set at the average from the available time series (brood years 1998 - 2016), while annual deviations from underlying age-specific means were drawn from a multivariate logistic distribution. Annual deviations were held constant among all CUs; however, the scale of annual deviations was controlled by the variability parameter $\tau$, which was estimated individually for each CU. This meant that while all CUs simultaneously experienced increases or decreases in a given year, the magnitude of the increase or decrease was CU-specific. Annual deviations were held constant among CUs to represent the strong co-variation in proportions at age seen in available time series for Interior Fraser Coho, especially since 2010 (Figure \@ref(fig:coho-recruitResid-Ricker)).  When the constraint of constant annual deviations was removed, generated proportion at age data was much more variable than observed data.  
 
 Annual variability in the age structure of recruits has not been included in other recent projection analyses for this SMU. Both @kormanEvaluationFrameworkAssessing2019 and @arbeiderInteriorFraserCoho2020 assumed a constant age structure over time.
-
+ 
+```{r coho-ageProp, fig.cap="Proportion of recruits returning at age 3 for 1998 - 2016 brood years. Only two age classes (age 3 and age 4) are present in the age structure, so the proportion of recruits returning at age 4 will account for the remainder of returns in each year.", warning=FALSE, echo=FALSE, out.width = '50%',  fig.align="center"}
+knitr::include_graphics("figure/coho-ObsAgeProp-byCU.png")
+```
 
 
 
@@ -384,31 +381,31 @@ Parameter & Value & Source \\
 \hline
 \endhead
 \hline
- Ricker Parameters ($\alpha$, $\beta$, $\gamma$,$\sigma$)  &  CU-specific (Appendix xxx) & Stock recruit parameters drawn from joint posterior from MCMC model fit to data from 1998 - 2020
+ Ricker Parameters ($\alpha$, $\beta$, $\gamma$,$\sigma$)  &  CU-specific (Appendix \@ref(coho-Appendix)) & Drawn from joint posterior from MCMC model fit to 1998-2016 brood years
 \\\\
 
-Smolt-to-adult marine survival rate distribution (all CUs) & Log-normal(-4.83, 1.21), bound between [-9.21, -3.32]
- & Estimated from time-series of annual marine survival rate estimates from brood years 1998 - 2016, with bounds set at lowest and highest observations (M. Arbeider, pers. comm) 
+Smolt-to-adult marine survival rate (all CUs) & Drawn from Lognormal(-4.83, 1.21), bound between [-9.21, -3.32]
+ & Estimated from annual marine survival rate estimates from brood years 1998 - 2016, with bounds set at lowest and highest observations
 \\\\  
 
- Among-CU variability in marine survival coefficient $\gamma$  &  $\sigma_{\gamma}$ = 0 (all CUs the same) & Assumed value when fitting models. Varied between 0 and 0.09 in sensitivity analyses, where upper limit of 0.09 is the standard deviation of the estimated marginal posterior distribution for $\gamma$ in current analyses. 
+ Among-CU variability in marine survival coefficient $\gamma$  &  $\sigma_{\gamma}$ = 0 (all CUs the same) & Assumed value when fitting models. Varied between 0 and 0.09 in sensitivity analyses, where upper limit of 0.09 is the standard deviation of the estimated marginal posterior distribution for $\gamma$. 
 \\\\
 
- Ave age proportions at maturity (ages 3, 4) &  MiddleFR, LThomp, SThomp = (0.86,0.14) , FRCanyon = (0.87, 0.13), NThomp = (0.88, 0.12) & Estimated from time-series of ppns of ages-at-maturity (M. Arbeider, pers. comm) 
+ Ave age proportions at maturity (ages 3, 4) &  MiddleFR, LThomp, SThomp = (0.86,0.14) , FRCanyon = (0.87, 0.13), NThomp = (0.88, 0.12) & Estimated from time-series of ppns of recruits at age
  \\\\  
 
- Variability in age proportions (tau from multivariate logistic distribution)  & MiddleFR, NThomp, SThomp = 1.0, LThomp = 0.9, FRCanyon = 0.8 & Estimated from time-series of ppns of ages-at-maturity (M. Arbeider, pers. comm). Assumed variable over CUs and years. \\\\
+ Interannual variability in age proportions (tau from multivariate logistic distribution)  & MiddleFR, NThomp, SThomp = 1.0, LThomp = 0.9, FRCanyon = 0.8 & Estimated from time-series of ppns of recruits at age. \\\\
 
- Average exploitation rate & 0.125 & Estimated from time-series of annual exploitation rate estimates from brood years 1998 - 2016. Varied in sensitivity analyses 0.05 - 0.35.
+ Average exploitation rate & 0.125 & Estimated from annual exploitation rate estimates from brood years 1998 - 2016. Varied in sensitivity analyses (0.05 - 0.35).
  \\\\
 
-Interannual variability in exploitation rates & CV = 0.442  & Estimated from time-series of age-3 ER estimates from brood years 1998 - 2016. Assumed to be beta distributed, constrained between 0-1.
+Interannual variability in exploitation rates & CV = 0.442  & Estimated from annual exploitation rate estimates from brood years 1998 - 2016. Assumed to be beta distributed, constrained between 0-1.
 \\\\
 
-Variability in exploitation rates among CUs & CV = 0.221 &  Assumed to be half of interannual variability, varied in a sensitivty analysis (0-0.442). Assumed to be beta distributed, constrained between 0-1.
+Variability in exploitation rates among CUs & CV = 0.221 & Assumed to be half of interannual variability. Varied in a sensitivity analysis (0-0.442).
 \\\\ 
 
-Initial abundances  & Initialized using spawner-recruit time series & Data provided by M. Arbeider (pers. comm)
+Initial abundances  & CU-specific & Abundance initialized using spawner-recruit time series
 \\\\
 
 Extirpation threshold &  2 & Mating constraint \\
